12Oct01=======================================================================
1. make del nnn delete messages again (fix system Aliases file)
09Oct01=======================================================================
1. change Aliases to allow shutdown as a command again. If you have changed
/spider/cmd/Aliases and you update from CVS you may find it better to remove
this file and then do another 'cvs update'. Otherwise you may get conflicts
and the Aliase file will not load properly. The cvs update will recreate 
the (now) missing file.
2. Remove the 'please don't use XXXX on here' messages to prevent people
from exploring the 'bad words space'. Three bad words will still disconnect
without warning. 
3. Sending dx spots/announces with bad words will succeed - but only back to
the sender. These two mods are designed to annoy the perpitrators of the
sort of filth as much as possible whilst not inconveniencing 'normal' users.
4. Add expunge feature to kill. Deleting messages now marks a msg for 
deletion two days hence. To have the old behaviour, do a 'kill exp' or use
the standard alias "expunge". This will cause the message to be deleted at
the next queue message cycle.
5. Put in prototype echo handling for direct connections using ExtMsg and
Listeners.pm.
6. fix msgs to g1tlh-2 (as opposed to g1tlh)
04Oct01=======================================================================
1. allow a residence time of (default) 2 days before actually deleting a msg.
2. reduce the number R: lines on a bull from a bbs to 2 (the origin and the
last port of call).
3. ignore deleted messages for queuing purposes
4. store deleted status across restarts!
5. make callsign checking more rigorous
6. dup check PC49 (kill full)
7. improved the regex matching of badwords (more efficient, better coverage)
8. added default badword and badw_regex tables (as .issue files) which will
activate unless there is one there already. It will NOT overwrite an existing